--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "firebase": "^11.9.0",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
