--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
+    "vue-chat-scroll": "file:alpha",
     "vue-router": "^4.5.1",
-    "vue-toast-notification": "^3.1.3"
+    "vue-toast-notification": "^3.1.3",
+    "vue3-chat-scroll": "^0.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
