--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "@vueuse/core": "^13.6.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.0",
     "pinia": "^3.0.3",
